--- a/blog_post/index.html
+++ b/blog_post/index.html
@@ -34,7 +34,7 @@
                 Yet another blog post
                 </div>
                 <div class="other">
-                The best post ever: read it
+                The best post ever: read this!
                 </div>
             </div>
             <div class="clearfix"></div>
