--- a/omnifood_project/index.html
+++ b/omnifood_project/index.html
@@ -12,9 +12,10 @@
     <body>
         <header>
             <div class="hero-text-box">
-                <h1>Goodbye junk food. Hello super healthy meals.</h1>
-                <a href='#'>I’m hungry</a>
-                <a href='#'>Show me more</a>
+
+                <h1>Goodbye junk food.<br> Hello super healthy meals.</h1>
+                <a class="btn btn-full" href="#">I'M Hungry</a>
+                <a class="btn btn-ghost" href="#">Show more me</a>
             </div>
         
         </header>
